@@ -24,6 +24,7 @@
 
 #include "final/fc.h"
 #include "final/foptimove.h"
+#include "final/ftermcap.h"
 
 namespace finalcut
 {
@@ -267,7 +268,7 @@ void FOptiMove::set_cursor_address (const char cap[])
 {
   if ( cap )
   {
-    const char* temp = tgoto(C_STR(cap), 23, 23);
+    const char* temp = FTermcap::encodeMotionParameter(cap, 23, 23);
     F_cursor_address.cap = cap;
     F_cursor_address.duration = capDuration (temp, 1);
     F_cursor_address.length = capDurationToLength (F_cursor_address.duration);
@@ -285,7 +286,7 @@ void FOptiMove::set_column_address (const char cap[])
 {
   if ( cap )
   {
-    const char* temp = tparm(C_STR(cap), 23, 0, 0, 0, 0, 0, 0, 0, 0);
+    const char* temp = FTermcap::encodeParameter(cap, 23);
     F_column_address.cap = cap;
     F_column_address.duration = capDuration (temp, 1);
     F_column_address.length = capDurationToLength (F_column_address.duration);
@@ -303,7 +304,7 @@ void FOptiMove::set_row_address (const char cap[])
 {
   if ( cap )
   {
-    const char* temp = tparm(C_STR(cap), 23, 0, 0, 0, 0, 0, 0, 0, 0);
+    const char* temp = FTermcap::encodeParameter(cap, 23);
     F_row_address.cap = cap;
     F_row_address.duration = capDuration (temp, 1);
     F_row_address.length = capDurationToLength (F_row_address.duration);
@@ -321,7 +322,7 @@ void FOptiMove::set_parm_up_cursor (const char cap[])
 {
   if ( cap )
   {
-    const char* temp = tparm(C_STR(cap), 23, 0, 0, 0, 0, 0, 0, 0, 0);
+    const char* temp = FTermcap::encodeParameter(cap, 23);
     F_parm_up_cursor.cap = cap;
     F_parm_up_cursor.duration = capDuration (temp, 1);
     F_parm_up_cursor.length = capDurationToLength (F_parm_up_cursor.duration);
@@ -339,7 +340,7 @@ void FOptiMove::set_parm_down_cursor (const char cap[])
 {
   if ( cap )
   {
-    const char* temp = tparm(C_STR(cap), 23, 0, 0, 0, 0, 0, 0, 0, 0);
+    const char* temp = FTermcap::encodeParameter(cap, 23);
     F_parm_down_cursor.cap = cap;
     F_parm_down_cursor.duration = capDuration (temp, 1);
     F_parm_down_cursor.length = capDurationToLength (F_parm_down_cursor.duration);
@@ -357,7 +358,7 @@ void FOptiMove::set_parm_left_cursor (const char cap[])
 {
   if ( cap )
   {
-    const char* temp = tparm(C_STR(cap), 23, 0, 0, 0, 0, 0, 0, 0, 0);
+    const char* temp = FTermcap::encodeParameter(cap, 23);
     F_parm_left_cursor.cap = cap;
     F_parm_left_cursor.duration = capDuration (temp, 1);
     F_parm_left_cursor.length = capDurationToLength (F_parm_left_cursor.duration);
@@ -375,7 +376,7 @@ void FOptiMove::set_parm_right_cursor (const char cap[])
 {
   if ( cap )
   {
-    const char* temp = tparm(C_STR(cap), 23, 0, 0, 0, 0, 0, 0, 0, 0);
+    const char* temp = FTermcap::encodeParameter(cap, 23);
     F_parm_right_cursor.cap = cap;
     F_parm_right_cursor.duration = capDuration (temp, 1);
     F_parm_right_cursor.length = capDurationToLength (F_parm_right_cursor.duration);
@@ -393,7 +394,7 @@ void FOptiMove::set_erase_chars (const char cap[])
 {
   if ( cap )
   {
-    const char* temp = tparm(C_STR(cap), 23, 0, 0, 0, 0, 0, 0, 0, 0);
+    const char* temp = FTermcap::encodeParameter(cap, 23);
     F_erase_chars.cap = cap;
     F_erase_chars.duration = capDuration (temp, 1);
     F_erase_chars.length = capDurationToLength (F_erase_chars.duration);
@@ -411,7 +412,7 @@ void FOptiMove::set_repeat_char (const char cap[])
 {
   if ( cap )
   {
-    const char* temp = tparm(C_STR(cap), ' ', 23, 0, 0, 0, 0, 0, 0, 0);
+    const char* temp = FTermcap::encodeParameter(cap, ' ', 23);
     F_repeat_char.cap = cap;
     F_repeat_char.duration = capDuration (temp, 1);
     F_repeat_char.length = capDurationToLength (F_repeat_char.duration);
@@ -686,7 +687,7 @@ inline int FOptiMove::verticalMove (char move[], int from_y, int to_y)
     if ( move )
     {
       std::strncpy ( move
-                   , tparm(C_STR(F_row_address.cap), to_y, 0, 0, 0, 0, 0, 0, 0, 0)
+                   , FTermcap::encodeParameter(F_row_address.cap, to_y)
                    , BUF_SIZE );
       move[BUF_SIZE - 1] = '\0';
     }
@@ -713,7 +714,7 @@ inline void FOptiMove::downMove ( char move[], int& vtime
     if ( move )
     {
       std::strncpy ( move
-                   , tparm(C_STR(F_parm_down_cursor.cap), num, 0, 0, 0, 0, 0, 0, 0, 0)
+                   , FTermcap::encodeParameter(F_parm_down_cursor.cap, num)
                    , BUF_SIZE );
       move[BUF_SIZE - 1] = '\0';
     }
@@ -741,7 +742,7 @@ inline void FOptiMove::upMove ( char move[], int& vtime
     if ( move )
     {
       std::strncpy ( move
-                   , tparm(C_STR(F_parm_up_cursor.cap), num, 0, 0, 0, 0, 0, 0, 0, 0)
+                   , FTermcap::encodeParameter(F_parm_up_cursor.cap, num)
                    , BUF_SIZE );
       move[BUF_SIZE - 1] = '\0';
     }
@@ -767,7 +768,7 @@ inline int FOptiMove::horizontalMove (char hmove[], int from_x, int to_x)
   {
     // Move to fixed column position1
     std::strncat ( hmove
-                 , tparm(C_STR(F_column_address.cap), to_x, 0, 0, 0, 0, 0, 0, 0, 0)
+                 , FTermcap::encodeParameter(F_column_address.cap, to_x)
                  , BUF_SIZE - std::strlen(hmove) - 1 );
     hmove[BUF_SIZE - 1] = '\0';
     htime = F_column_address.duration;
@@ -790,7 +791,7 @@ inline void FOptiMove::rightMove ( char hmove[], int& htime
   if ( F_parm_right_cursor.cap && F_parm_right_cursor.duration < htime )
   {
     std::strncpy ( hmove
-                 , tparm(C_STR(F_parm_right_cursor.cap), num, 0, 0, 0, 0, 0, 0, 0, 0)
+                 , FTermcap::encodeParameter(F_parm_right_cursor.cap, num)
                  , BUF_SIZE - 1);
     hmove[BUF_SIZE - 1] = '\0';
     htime = F_parm_right_cursor.duration;
@@ -845,7 +846,7 @@ inline void FOptiMove::leftMove ( char hmove[], int& htime
   if ( F_parm_left_cursor.cap && F_parm_left_cursor.duration < htime )
   {
     std::strncpy ( hmove
-                 , tparm(C_STR(F_parm_left_cursor.cap), num, 0, 0, 0, 0, 0, 0, 0, 0)
+                 , FTermcap::encodeParameter(F_parm_left_cursor.cap, num)
                  , BUF_SIZE - 1);
     hmove[BUF_SIZE - 1] = '\0';
     htime = F_parm_left_cursor.duration;
@@ -906,13 +907,14 @@ inline bool FOptiMove::isMethod0Faster ( int& move_time
                                        , int xnew, int ynew )
 {
   // Test method 0: direct cursor addressing
-  const char* move_xy = tgoto(C_STR(F_cursor_address.cap), xnew, ynew);
+  const char* move_xy = \
+    FTermcap::encodeMotionParameter(F_cursor_address.cap, xnew, ynew);
 
   if ( move_xy )
   {
-    char* move_ptr = move_buf;
-    std::strncpy (move_ptr, move_xy, BUF_SIZE - 1);
-    move_ptr[BUF_SIZE - 1] = '\0';
+    std::strncpy ( reinterpret_cast<char*>(move_buf)
+                 , move_xy, BUF_SIZE - 1 );
+    move_buf[BUF_SIZE - 1] = '\0';
     move_time = F_cursor_address.duration;
     return true;
   }
