@@ -36,23 +36,6 @@
 #endif
 
 #include <assert.h>
-
-#if defined(__sun) && defined(__SVR4)
-  #include <termio.h>
-  typedef struct termio SGTTY;
-  typedef struct termios SGTTYS;
-
-  #ifdef _LP64
-    typedef unsigned int chtype;
-  #else
-    typedef unsigned long chtype;
-  #endif
-
-  #include <term.h>   // need for tparm
-#else
-  #include <term.h>   // need for tparm
-#endif
-
 #include <algorithm>  // need for std::swap
 
 #include "final/fstring.h"
