@@ -1,3 +1,6 @@
+2020-05-02  Markus Gans  <guru.mail@muenster.de>
+	* Transfer of all termcap functions into the FTermcap class
+
 2020-04-28  Markus Gans  <guru.mail@muenster.de>
 	* Adding the missing method getClientSize()
 	* Static code for the special built-in key sequences
